feat: implement pop-up for both pages

--- a/shelter/src/sass/abstract/_constants.scss
+++ b/shelter/src/sass/abstract/_constants.scss
@@ -14,7 +14,7 @@ $color-primary-light: #FDDCC4;
 $color-menu-light: #FFFFFF;
 $color-menu-dark: #292929;
 
-$color-menu-curtain: #29292999;
+$color-curtain: #29292999;
 
 $desktop-width: 1280px;
 $laptop-width: 1024px;
