--- a/shelter/src/sass/layouts/_header-pets.scss
+++ b/shelter/src/sass/layouts/_header-pets.scss
@@ -151,7 +151,7 @@
     height: 100%;
     width: 0%;
     z-index: 1;
-    background-color: $color-menu-curtain;
+    background-color: $color-curtain;
     @extend %transition-slow;
 }
 
