--- a/shelter/src/sass/style.scss
+++ b/shelter/src/sass/style.scss
@@ -14,12 +14,12 @@
 
 @import "layouts/not-only";
 @import "layouts/about";
+@import "layouts/pop-up";
 @import "layouts/our-friends";
 @import "layouts/help";
 @import "layouts/in-addition";
 
 @import "layouts/footer";
-
 
 @import "layouts/header-pets";
 @import "layouts/our-friends-pets";
