--- a/shelter/src/sass/layouts/_header-pets.scss
+++ b/shelter/src/sass/layouts/_header-pets.scss
@@ -43,10 +43,10 @@
         justify-content: center;
         align-items: center;
         position: fixed;
-        right: 0;
+        right: -320px;
         top: 0;
         height: 100%;
-        width: 0px;
+        width: 320px;
         z-index: 1;
         background-color: $color-menu-light;
         transition: all 500ms ease-in-out;
@@ -103,7 +103,6 @@
             }
             @include media-less-tablet {
                 @include font(3.2rem, 160%, 400, normal);
-                transition: all 0ms ease-in-out;
             }
         }
     }
@@ -112,7 +111,7 @@
 .header-pets-navigation-show {
     @include media-less-tablet {
         transition: all 500ms ease-in-out;
-        width: 320px;
+        transform: translateX(-320px);
     }
     ul {
         @include media-less-tablet {
@@ -157,6 +156,5 @@
 
 .header-pets-overlay-show {
     width: 100%;
-    height: 100%;
     @extend %transition-slow;
 }
