--- a/shelter/src/sass/layouts/_our-friends.scss
+++ b/shelter/src/sass/layouts/_our-friends.scss
@@ -14,16 +14,16 @@
         margin: 0 10px 0 10px;
     }
     h2 {
-        margin: 80px 0 20px 0;
+        margin: 80px 0 60px 0;
         text-align: center;
         @include media-mobile-XL {
-            margin: 42px 0 2px 0; 
+            margin: 42px 0 42px 0; 
         }
     }
     .button-type-1 {
         width: 261px;
         height: 52px;
-        margin: 20px 0 100px 0;
+        margin: 60px 0 100px 0;
         @include media-mobile-XL {
             margin: 42px 0 42px 0;
             flex-wrap: wrap;
@@ -40,14 +40,14 @@
     > button:first-child {
         background: center no-repeat url(../../img/icons/arrow-left.svg);
         @include media-mobile-XL {
-            margin: 0 11px 0 0;
+            margin: 20px 11px 0 0;
         }
     }
 
     > button:last-child {
         background: center no-repeat url(../../img/icons/arrow-right.svg);
         @include media-mobile-XL {
-            margin: 0 0 0 11px;
+            margin: 20px 0 0 11px;
         }
     }
     @include media-less-tablet {
@@ -110,6 +110,12 @@
     margin: 0 0 0 0;
     border-radius: 9px;
     @extend %transition;
+    img {
+        border-top-left-radius: 9px;
+        border-top-right-radius: 9px;
+        height: 270px;
+        width: 270px;
+    }
     p {
         font-family: 'Georgia', serif;
         @include font(2.0rem, 115%, 400, normal);
